examples/test/testpolicy7758.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7758
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key45: value8
      key40: value45
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value44
          key48: value0
      podSelector:
        matchLabels:
          key23: value40
          key46: value29
